# embedded-dtls

./: Cargo.toml  LICENSE-MIT  README.md
.helix/: languages.toml
example-project/: README.md  rust-toolchain.toml
example-project/firmware/: Cargo.toml  memory.x
example-project/firmware/.cargo/: config.toml
example-project/firmware/src/: bsp.rs  lib.rs
example-project/firmware/src/bsp/: ksz8863.rs
example-project/pc-app/: Cargo.toml
example-project/pc-app/src/: ingress.rs  main.rs
example-project/pc-app/src/ingress/: api.rs  engine.rs  subscriptions.rs
example-project/pc-app/src/ingress/engine/: edtls.rs  postcard_rpc.rs
example-project/rpc-definition/: Cargo.toml
example-project/rpc-definition/src/: lib.rs
src/: buffer.rs  cipher_suites.rs  client.rs  connection.rs  delay.rs  handshake.rs  integers.rs  key_schedule.rs  lib.rs  queue_helpers.rs  record.rs  server.rs  session.rs
src/client/: config.rs
src/connection/: key_update.rs  select_sharing.rs
src/connection/select_sharing/: atomic_waker.rs  mutex.rs  signal.rs
src/handshake/: extensions.rs
src/handshake/extensions/: heartbeat.rs
src/record/: heartbeat.rs
src/server/: config.rs
