[package]
name = "embedded-dtls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.8.0", features = ["defmt-03"] }
rand_core = { version = "0.6.4", default-features = false }
rand = "0.8.5"
defmt = "0.3.6"

x25519-dalek = { version = "2.0.1", default-features = false, features = ["zeroize", "getrandom"] } # TODO: Replace with something that works on MCU and backend

# For cipher suite
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["heapless"] }
sha2 = { version = "0.10", default-features = false }
digest = { version = "0.10.7", default-features = false }
typenum = { version = "1.17.0", default-features = false, features = ["no_std"] }
hkdf = { version = "0.12.4", default-features = false }
l0g = "1.0.0"
zeroize = { version = "1.7.0", default-features = false, features = ["derive", "std"] }
num_enum = { version = "0.7.2", default-features = false }
aead = "0.5.2"
chacha20 = "0.9.1"

# p256-cortex-m4 = "0.1.0-alpha.6"
# hkdf = { version = "0.12.4", default-features = false }
# embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
# embedded-io = { version = "0.6.1", features = ["defmt-03"] }

[features]
default = []

# UNSAFE: This will print encryption keys, pre-shared keys and nonces in plaintext for debuging
# purposes for built-in ciphers. NEVER have this feature enabled in production.
unsafe_debug_keys = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
l0g = { version = "1.0.0", features = ["log"] }
simple_logger = { version = "4.3.3", default-features = false, features = ["colored", "colors"] }
