[package]
name = "pc-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
tokio = { version = "1.36.0", features = ["full"] }
rpc-definition = { path = "../rpc-definition", features = ["backend"] }
once_cell = "1.19.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rustc-hash = "1.1.0"
thiserror = "1.0.61"
rand = "0.8.5"

[dependencies.embedded-dtls]
path = "../.."
features = ["tokio-queue", "log"]
