[package]
name = "rpc-definition"
version = "0.1.0"
edition = "2021"

[dependencies]
postcard = { version = "1.0.8", features = ["experimental-derive"] }
serde = { version = "1.0.192", features = ["derive"], default-features = false }
postcard-rpc = { version = "0.5.1" }
defmt = { version = "0.3", optional = true }

[features]
backend = ["postcard-rpc/use-std"]
defmt-03 = ["dep:defmt"]
